Add an endpoint to get their own user profile
